@@ -6,6 +6,7 @@
 	* Tools/AGSOutput.m: Support (name) syntax for specifying a protocol
 	cross reference using [(name)-method]
 	* Tools/autogsdoc.m: Improve documentation of method references.
+	* Tools/AGSparser.m: Handle @class statements.
 
 2001-12-16  Richard Frith-Macdonald <rfm@gnu.org>
 
